@@ -175,3 +175,4 @@ kotcrab https://github.com/kotcrab
 ClaudiuBele https://github.com/ClaudiuBele
 realitix https://github.com/realitix
 vmilea https://github.com/vmilea
+intrigus https://github.com/intrigus
